Rename some dangerous files.

--- a/danger.html
+++ b/danger.html
@@ -22,12 +22,7 @@
       -
       - [1]: https://developer.chrome.com/extensions/contentSecurityPolicy
      -->
-    <script src="./popup_files/popup.js"></script>
+    <script src="./danger_files/danger.js"></script>
   </head>
   <body>
-    <div id="status">   </div>
-    <img id="image-result" hidden="">
-  
-
-
 </body></html>
